finished profile circle

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   </nav>
   <!-- container where the content of the page will go -->
   <div class="container">
+    <div class="profile-container"></div>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
       magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
