--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,22 @@
         </div>
     </nav>
     <!-- container where the content of the page will go -->
-    <h1>THIS IS WHERE MY PROJECTS WILL GO</h1>
+    <main class="container">
+        <h1>THIS IS WHERE MY PROJECTS WILL GO</h1>
+    </main>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer-content">
+            <div>
+                <h3>Contact</h2>
+                    <p>Tess Trenear</p>
+                    <p>0406 619 909</p>
+                    <a href="mailto:tesstrenear@outlook.com">tesstrenear@outlook.com</a>
+            </div>
+            <p>© 2025 Tess & Co</p>
+        </div>
+    </footer>
 </body>
 
 </html>
