--- a/index.html
+++ b/index.html
@@ -45,15 +45,32 @@
     </div>
   </nav>
   <!-- container where the content of the page will go -->
-  <div class="container">
+  <main class="container">
     <div class="profile-container"></div>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-  </div>
+    <div>
+      <h2>About Me</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+
+  </main>
+  <!-- footer -->
+  <footer>
+    <div class="footer-content">
+      <div>
+        <h3>Contact</h2>
+          <p>Tess Trenear</p>
+          <p>0406 619 909</p>
+          <a href="mailto:tesstrenear@outlook.com">tesstrenear@outlook.com</a>
+      </div>
+      <p>© 2025 Tess & Co</p>
+    </div>
+  </footer>
 </body>
 
 </html>
