finished project holding place

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <div class="nav-content">
       <div>
-        <p class="nav-name">Tess</p>
+        <a class="nav-name" href="index.html">Tess</a>
       </div>
       <div class="nav-icons">
         <a class="nav-icon" href="index.html" aria-label="home">
