--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="nav-content">
             <div>
-                <p class="nav-name">Tess</p>
+                <a class="nav-name" href="index.html">Tess</a>
             </div>
             <div class="nav-icons">
                 <a class="nav-icon" href="index.html" aria-label="home">
@@ -47,9 +47,50 @@
             </div>
         </div>
     </nav>
-    <!-- container where the content of the page will go -->
+    <!-- projects placeholders -->
     <main class="container">
-        <h1>THIS IS WHERE MY PROJECTS WILL GO</h1>
+        <h1>My Projects</h1>
+        <div classs="projects-container">
+            <!-- project 1 placeholder -->
+            <div class="project">
+                <div class="project-image-container" style="background-image: url(images/puppy-1.avif);">
+                </div>
+                <div>
+                    <h2>Project 1</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type
+                    </p>
+                </div>
+            </div>
+            <!-- project 2 placeholder -->
+            <div class="project">
+                <div class="project-image-container" style="background-image: url(images/puppy-2.jpg);">
+                </div>
+                <div>
+                    <h2>Project 2</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type
+                    </p>
+                </div>
+            </div>
+            <!-- project 3 placeholder -->
+            <div class="project">
+                <div class="project-image-container" style="background-image: url(images/puppy-3.jpg);">
+                </div>
+                <div>
+                    <h2>Project 3</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- footer -->
