reduced sizing of copyright font

--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
                     <p>0406 619 909</p>
                     <a href="mailto:tesstrenear@outlook.com">tesstrenear@outlook.com</a>
             </div>
-            <p>© 2025 Tess & Co</p>
+            <small>© 2025 Tess & Co</small>
         </div>
     </footer>
 </body>
