image path changes and readme updates

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
         <div classs="projects-container">
             <!-- project 1 placeholder -->
             <div class="project">
-                <div class="project-image-container" style="background-image: url(images/puppy-1.avif);">
+                <div class="project-image-container" style="background-image: url(images/projects/puppy-1.avif);">
                 </div>
                 <div>
                     <h2>Project 1</h2>
@@ -69,7 +69,7 @@
             </div>
             <!-- project 2 placeholder -->
             <div class="project">
-                <div class="project-image-container" style="background-image: url(images/puppy-2.jpg);">
+                <div class="project-image-container" style="background-image: url(images/projects/puppy-2.jpg);">
                 </div>
                 <div>
                     <h2>Project 2</h2>
@@ -82,7 +82,7 @@
             </div>
             <!-- project 3 placeholder -->
             <div class="project">
-                <div class="project-image-container" style="background-image: url(images/puppy-3.jpg);">
+                <div class="project-image-container" style="background-image: url(images/projects/puppy-3.jpg);">
                 </div>
                 <div>
                     <h2>Project 3</h2>
